<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activites.AdderActivity">

    <TextView
            android:text="@string/add_activity_header"
            android:layout_width="wrap_content"
            android:textColor="@color/secondaryColor"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="32sp"
            android:layout_marginTop="@dimen/big_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/add_activity_opis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginStart="@dimen/big_padding" android:layout_marginTop="36dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/activity_add_opis_input"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginStart="@dimen/big_padding"/>
    <TextView
            android:text="@string/activity_add_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:id="@+id/activity_add_date_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginStart="@dimen/big_padding"
            app:layout_constraintTop_toBottomOf="@+id/activity_add_opis_input"
            android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/date_button_label"
            android:layout_width="wrap_content"
            style="@style/TextButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_height="wrap_content"
            android:id="@+id/activity_add_date_textView"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_add_date_label"
            android:layout_marginLeft="@dimen/big_padding"
            android:onClick="chooseDate"
            android:paddingRight="@dimen/small_padding"
            android:layout_marginStart="@dimen/big_padding" android:paddingEnd="@dimen/small_padding"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/date_from_label"
              app:layout_constraintTop_toBottomOf="@+id/activity_add_date_label"
              android:layout_marginLeft="@dimen/big_padding"
              android:textColor="@color/primaryColor"
              android:layout_marginTop="@dimen/big_padding"
              android:text="@string/adder_from_label" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="@dimen/big_padding"/>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/view_group_time"
                  app:layout_constraintTop_toBottomOf="@id/activity_add_date_textView"
                  android:orientation="horizontal"
                  android:layout_marginTop="@dimen/big_padding"
                  app:layout_constraintStart_toEndOf="@+id/textView2">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/adder_from_button_label"
                  android:layout_marginLeft="@dimen/big_padding"
                  style="@style/TextButton"
                  android:onClick="chooseTime"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:id="@+id/date_from"
                  android:layout_marginStart="@dimen/big_padding"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/date_to_label"
                  android:textColor="@color/primaryColor"
                  android:layout_marginLeft="@dimen/big_padding"
                  android:text="@string/adder_to_label" android:layout_marginStart="@dimen/big_padding"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/adder_to_button_label"
                  android:layout_marginLeft="@dimen/big_padding"
                  style="@style/TextButton"
                  android:onClick="chooseTime"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:id="@+id/date_to"
                  android:layout_marginStart="@dimen/big_padding"/>
    </LinearLayout>
    <TextView
            android:text="@string/activity_add_notify_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginStart="@dimen/big_padding"
            android:textColor="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@+id/view_group_time"
            android:layout_marginTop="@dimen/big_padding"/>
    <RadioGroup android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_padding"
                android:layout_marginTop="30dp"
                android:padding="0dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/view_group_time"
                app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="@dimen/big_padding"
                android:id="@+id/radioGroup">
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/notify_radio_Yes"
                     android:text="@string/notify_radio_1_label"
                     android:onClick="onRadioNotifyButtonClicked"
                     android:checked="false"
        >
        </RadioButton>
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:buttonTint="@color/secondaryColor"
                     android:id="@+id/notify_radio_No"
                     android:onClick="onRadioNotifyButtonClicked"
                     android:text="@string/notify_radio_2_label">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            android:id="@+id/notify_date_layout"
            android:layout_marginLeft="@dimen/tabbed_pading"
            android:layout_marginTop="@dimen/small_padding"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/tabbed_pading">
        <TextView
                android:text="@string/activity_add_notify_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:id="@+id/activity_add_date_notify_label"/>
        <TextView
                android:text="date"
                android:layout_width="wrap_content"
                android:textColor="@color/secondaryColor"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_date_notify"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginLeft="@dimen/big_padding"
                android:onClick="chooseDate"
                android:layout_marginStart="@dimen/big_padding"/>
        <TextView
                android:text="time"
                android:layout_width="wrap_content"
                android:textColor="@color/secondaryColor"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_time_notify"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginLeft="@dimen/big_padding"
                android:onClick="chooseTime"
                android:layout_marginStart="@dimen/big_padding"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_label"
            android:id="@+id/add_task"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="onCreateButtonClick"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginTop="32dp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/secondaryColor"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:strokeWidth="2dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>